[package]
authors = ["Sebastian Menski <sebastian@menski.org>"]
name = "unterflow"
version = "0.1.0"

[dependencies]
bytes = "0.4.5"
futures = "0.1.15"
log = "0.3.8"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"

[dependencies.unterflow-protocol]
git = "https://github.com/unterflow/unterflow-protocol"
optional = false

[dev-dependencies]
loggerv = "0.3.0"
